<resources>
    <string name="app_name">ToiletLog</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Profile</string>
    <string name="sync_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="name_title">Your name</string>
    <string name="gender_title">Your gender</string>

    <!-- Sync Preferences -->
    <string name="notifications_title">Receive daily notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for activity titles -->
    <string name="title_main_menu">Main Menu</string>
    <string name="title_list">Daily Log</string>
    <string name="title_new_entry">New Entry</string>
    <string name="title_settings">Settings</string>
    <string name="title_single_entry">Single Entry</string>
    <string name="title_map">Public toilet map</string>
    <string name="title_analysis">Monthly analysis</string>

    <!-- Map strings -->
    <string name="map_api_key">AIzaSyDdDdFv2K6plIEKfiEnWpus6uSSNDcI-VY</string>


</resources>